# yuehan9

./: .gitignore
bash/: buildX.sh  wayland-build.sh
docs/: build-mesa.txt  irq_dump.txt  platform_dump.txt  repo-info.txt  sysfs_dump.txt
drm_dumb_bo/: Makefile  drm.c  font_8x16.c  font_8x8.c
gfxnuts/: configure.ac
gfxnuts/src/: 16xaa_simplest_ortho_raycast.cpp  4xaa_simplest_ortho_raycast.cpp  Makefile.am  noise1d.hpp  noise2d.hpp  ppm.hpp  ray.hpp  simplest_ortho_raycast.cpp  sphere.hpp  surface.hpp  triangle.hpp  unittest_noise1d.cpp  unittest_noise2d_abssign.cpp  unittest_noise2d_fractalsum.cpp  unittest_noise2d_marble.cpp  unittest_noise2d_period.cpp  unittest_noise2d_wood.cpp  unittest_ppm.cpp  unittest_sphere.cpp  unittest_triangle.cpp  unittest_vec3.cpp  vec3.hpp
glut/: configure.ac
glut/src/: Makefile.am  assimp.cpp  mesh_loader.h  triangle.cpp  warp.h
glut/src/shaders/: assimp.frag  simple.frag  simple.vert
ogl/: f20.cpp  ogl_helper.c  ogl_helper.h  sconstruct  subroutine.c  tess.cpp  tnl.cpp  tri.c
ogl/shaders/: simple.frag  simple.vert  subroutine.frag
raytracer/: configure.ac
raytracer/src/: Makefile.am  bare.cpp  bare_shadow.cpp  bare_shadow2.cpp  ray.hpp  sphere.hpp  vec3.hpp
render/: Makefile.am  configure.ac
render/gles/: Makefile.am  egl_clear.c  egl_template.c  es3_blend.cpp  es3_cull.c  es3_draw_rect.c  es3_draw_tri.c  es3_dual_vao.cpp  es3_indexdraw_rect.c  es3_indexdraw_rect_strip.c  es3_instance_0.cpp  es3_instance_1.cpp  es3_scissor.cpp  es3_texture2d_cube.cpp  es3_texture2d_rect.cpp  es3_ubo.cpp  pbuffer.c  pbuffer_rendertexture.c  rendertexture.c  shared_context.c  warp_types.h
render/gles/shaders/: constant.frag  es3_cull.frag  es3_draw_tri.frag  es3_draw_tri.vert  es3_dual_vao.frag0  es3_dual_vao.frag1  es3_dual_vao.vert  es3_indexdraw_rect.vert  es3_indexdraw_rect_strip.frag  es3_instance_0.frag  es3_instance_0.vert  es3_instance_1.vert  es3_texture2d.frag  es3_texture2d.vert  es3_texture2d_cube.vert  es3_ubo.frag  es3_ubo.vert  quad.frag  quad.vert  simple.vert
render/src/: Makefile.am  alpha_map.cpp  animation_cube_orbit.cpp  animation_orbit_light.cpp  atomic_count.cpp  attrib.c  attrib.cpp  basic-win.c  basic_layered_rendering.cpp  blinn_phong_model.cpp  bloom.cpp  cartoonify.cpp  compute_image_load_store.cpp  compute_large_image.cpp  copying.cpp  cpu_gasket2d.cpp  cpu_recursive_gasket2d.cpp  cpu_recursive_gasket3d.cpp  cpu_wf_sphere.cpp  cs_rwbarrier.cpp  dfdx_dfdy.cpp  draw-color.c  draw-font.c  draw-line.c  draw_xfb.c  dual_vao.cpp  edge_detect.cpp  environment.cpp  fragc.cpp  fragcord.c  funky.cpp  gaussian_blur.cpp  geometry_point.cpp  geometry_triangle.cpp  gl-line.c  gl-triangle.c  gl-vertex.c  glfw_blend.cpp  glfw_cull.c  glfw_demo.c  (+84 more)
render/src/objs/: stormtrooper.mtl
render/src/shaders/: alpha_map.frag  atomic_count_triangle.geo  atomic_count_vertice.vert  attrib2.frag  attrib2.vert  basic_layered_rendering.geo  bezier.frag  blinn-phong.frag  blinn-phong2.frag  bloom_brightness.frag  bloom_gaussian_blur_hpass.frag  bloom_gaussian_blur_vpass.frag  bloom_merge.frag  cartoonify.frag  circle.frag  circle_shape.frag  compute_large_image.comp  concentric_circle.frag  cpu_recursive_gasket3d.vert  cpu_wf_sphere.vert  cs_rwbarrier.comp  cs_rwbarrier2.comp  curve.frag  dfdx_dfdy.frag  edge_detect.frag  enclosed_curve.frag  environment.frag  environment.vert  fragcord.frag  funky.frag  funky.vert  gaussian_blur_hpass.frag  gaussian_blur_vpass.frag  geo.vert  glfw_fb_mrt_stage1.frag  glfw_fb_mrt_stage1.vert  glfw_fb_rendertex_stage1.frag  glfw_fb_rendertex_stage1.vert  glfw_fb_rendertex_stage2.frag  glfw_fb_rendertex_stage2.vert  (+54 more)
swr/: configure.ac
swr/src/: Makefile.am  alias_line.cpp  alias_line_v2.cpp  barycentric_swr.cpp  interpolation_swr.cpp  triangle_swr.cpp
