bin_PROGRAMS =

AM_CXXFLAGS = $(GXX_CFLAGS)
LDADD = -lm

bin_PROGRAMS += unittest_vec3
unittest_vec3_SOURCES = unittest_vec3.cpp
unittest_vec3_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_triangle
unittest_triangle_SOURCES = unittest_triangle.cpp
unittest_triangle_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_sphere
unittest_sphere_SOURCES = unittest_sphere.cpp
unittest_sphere_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_ppm
unittest_ppm_SOURCES = unittest_ppm.cpp
unittest_ppm_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += 4xaa_simplest_ortho_raycast
4xaa_simplest_ortho_raycast_SOURCES = 4xaa_simplest_ortho_raycast.cpp
4xaa_simplest_ortho_raycast_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += 16xaa_simplest_ortho_raycast
16xaa_simplest_ortho_raycast_SOURCES = 16xaa_simplest_ortho_raycast.cpp
16xaa_simplest_ortho_raycast_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += simplest_ortho_raycast
simplest_ortho_raycast_SOURCES = simplest_ortho_raycast.cpp
simplest_ortho_raycast_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_noise2d_period
unittest_noise2d_period_SOURCES = unittest_noise2d_period.cpp
unittest_noise2d_period_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_noise2d_wood
unittest_noise2d_wood_SOURCES = unittest_noise2d_wood.cpp
unittest_noise2d_wood_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_noise1d
unittest_noise1d_SOURCES = unittest_noise1d.cpp
unittest_noise1d_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_noise2d_abssign
unittest_noise2d_abssign_SOURCES = unittest_noise2d_abssign.cpp
unittest_noise2d_abssign_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_noise2d_fractalsum
unittest_noise2d_fractalsum_SOURCES = unittest_noise2d_fractalsum.cpp
unittest_noise2d_fractalsum_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += unittest_noise2d_marble
unittest_noise2d_marble_SOURCES = unittest_noise2d_marble.cpp
unittest_noise2d_marble_CXXFLAGS = $(AM_CXXFLAGS)
