bin_PROGRAMS =
AM_CFLAGS = $(GCC_CFLAGS)
AM_CXXFLAGS = $(GXX_CFLAGS)
LDADD = @X11_LIBS@ @GLES_LIBS@ @EGL_LIBS@ -lSOIL

bin_PROGRAMS += egl_clear
egl_clear_SOURCES = egl_clear.c
egl_clear_CFLAGS = $(AM_CFLAGS)

bin_PROGRAMS += egl_template
egl_template_SOURCES = egl_template.c
egl_templater_CFLAGS = $(AM_CFLAGS)

bin_PROGRAMS += es3_draw_tri
es3_draw_tri_SOURCES = es3_draw_tri.c
es3_draw_tri_CFLAGS = $(AM_CFLAGS)

bin_PROGRAMS += es3_draw_rect
es3_draw_rect_SOURCES = es3_draw_rect.c
es3_draw_rect_CFLAGS = $(AM_CFLAGS)

bin_PROGRAMS += es3_indexdraw_rect
es3_indexdraw_rect_SOURCES = es3_indexdraw_rect.c
es3_indexdraw_rect_CFLAGS = $(AM_CFLAGS)

bin_PROGRAMS += es3_indexdraw_rect_strip
es3_indexdraw_rect_strip_SOURCES = es3_indexdraw_rect_strip.c
es3_indexdraw_rect_strip_CFLAGS = $(AM_CFLAGS)

bin_PROGRAMS += es3_cull
es3_cull_SOURCES = es3_cull.c
es3_cull_CFLAGS = $(AM_CFLAGS)

bin_PROGRAMS += es3_dual_vao
es3_dual_vao_SOURCES = es3_dual_vao.cpp
es3_dual_vao_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += es3_texture2d_rect
es3_texture2d_rect_SOURCES = es3_texture2d_rect.cpp
es3_texture2d_rect_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += es3_texture2d_cube
es3_texture2d_cube_SOURCES = es3_texture2d_cube.cpp
es3_texture2d_cube_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += es3_ubo
es3_ubo_SOURCES = es3_ubo.cpp
es3_ubo_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += es3_instance_0
es3_instance_0_SOURCES = es3_instance_0.cpp
es3_instance_0_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += es3_instance_1
es3_instance_1_SOURCES = es3_instance_1.cpp
es3_instance_1_CXXFLAGS = $(AM_CXXFLAGS)
