bin_PROGRAMS =

AM_CFLAGS = $(GCC_CFLAGS)
AM_CXXFLAGS = $(GXX_CFLAGS)
LDADD = -lm

bin_PROGRAMS += triangle_swr
triangle_swr_SOURCES = triangle_swr.cpp
triangle_swr_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += barycentric_swr
barycentric_swr_SOURCES = barycentric_swr.cpp
barycentric_swr_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += interpolation_swr
interpolation_swr_SOURCES = interpolation_swr.cpp
interpolation_swr_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += alias_line
alias_line_SOURCES = alias_line.cpp
alias_line_CXXFLAGS = $(AM_CXXFLAGS)

bin_PROGRAMS += alias_line_v2
alias_line_v2_SOURCES = alias_line_v2.cpp
alias_line_v2_CXXFLAGS = $(AM_CXXFLAGS)
